# ostv

./: .gitignore  LICENSE  README.md
docs/: TZ.md
examples/hyperv-vm/: README.md  meta-data  setup-ostv-vm.ps1  user-data
research/: filmix.md
scripts/: build-release.sh  install-ostv.sh  update.sh
scripts/lib/: 00-legacy-cleanup.sh  01-snapshot.sh  02-packages.sh  03-user-tv.sh  04-ostv-layout.sh  05-dev-mode.sh  06-tauri-deps.sh  07-kiosk-rollback.sh  07-kiosk-setup.sh  08-systemd-services.sh
src/: requirements.txt
src-tauri-ui/src/: App.css  App.tsx
src-tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-ui/src-tauri/src/: lib.rs
src/brain/: brain.py
src/parsers/filmix/: filmix.py
src/parsers/hdrezka/: hdrezka.py
src/ui/: ui.py
