[package]
name = "ostv-ui"
version = "0.1.0"
description = "OsTv TV UI (Tauri 2 + React)"
authors = ["Denis Romanyuk"]
edition = "2021"

[lib]
name = "ostv_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
